objects/Airplane__c.object
<CustomObject>
    <fields>
        <fullName>Aeroplane_id__c</fullName>
        <label>Aeroplane id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Airline_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Airline id</label>
        <referenceTo>Airline__c</referenceTo>
        <relationshipLabel>Airplanes</relationshipLabel>
        <relationshipName>Airplanes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Model_Number__c</fullName>
        <label>Model Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Runway__c</fullName>
        <label>Runway</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Long Runway</fullName>
                </value>
                <value>
                    <fullName>Medium Runway</fullName>
                </value>
                <value>
                    <fullName>Short RunWay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>manufacturer__c</fullName>
        <label>manufacturer</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Airplane</label>
    <nameField>
        <label>Airplane Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Airplanes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>